# lazy_pattern

./: README.md  makefile  pyproject.toml
examples/: event_sourcer.py  object_pool.py
lazy_pattern/: error.py  event_sourcer.py  object_pool.py  stacker.py
tests/: test_event_sourcer.py  test_object_pool.py  test_stacker.py
